--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% load crispy_forms_tags %}
+
 
 {% block content %}
   {% if form.non_field_errors %}
@@ -16,11 +16,10 @@
   <div class="row">
     <div class="col-lg-4 col-md-6 col-sm-8 col-12">
       <h2>Log in</h2>
-      <form method="post" novalidate>
+      <form method="post" action="/accounts/login/">
         {% csrf_token %}
         <input type="hidden" name="next" value="{{ next }}">
-        {{ form.username|as_crispy_field }}
-        {{ form.password|as_crispy_field }}
+        {{ form }}
         <button type="submit" class="btn btn-primary">Log in</button>
       </form>
     </div>
