--- a/classroom/templates/classroom/teachers/score.html
+++ b/classroom/templates/classroom/teachers/score.html
@@ -1,14 +1,38 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <ul>
+    {{ l }}
+    <ul xmlns="http://www.w3.org/1999/html">
         {% for answer,form in list %}
-            <form action="/teachers/questions/{{ answer.question.id }}/score" method="post">
-            {% csrf_token %}
-            <li>{{ answer.student.reg_no }} {{ answer.text }} {{ answer.given_score }} {{ answer.calculated_score }} {{ answer.final_score }}</li>
-            {{ form }}
-            <input type="submit" value="Submit"/>
-            </form>
+            <li>
+                <form action="" method="post">
+                    {% csrf_token %}
+                    <p>Registration no: {{ answer.student.reg_no }}</p>
+                    <p>Answer: {{ answer.text }}</p>
+                    <div class="row">
+                        <div class="col-6">
+                            <p>Given Score: {{ form.given_score }}</p>
+                            <p> Calculated Score:
+                                {% if answer.calculated_score != -1 %}
+                                    {{ answer.calculated_score }}
+
+                                {% else %}
+                                    <input type="button"
+                                           value="Refresh Page"
+                                           onClick="window.location.href=window.location.href">
+                                    </p>
+
+                                {% endif %}
+                            <p> Final Score: {{ answer.final_score }}</p>
+                        </div>
+                        <div class="col-6">
+                            {{ form.final_score }}
+                            <p hidden>{{ form.answer_id }}</p>
+                        </div>
+                    </div>
+                    <input type="submit" value="Submit"/>
+                </form>
+            </li>
         {% endfor %}
     </ul>
 {% endblock %}
