--- a/templates/base.html
+++ b/templates/base.html
@@ -3,12 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>{% block title %}Django School{% endblock %}</title>
+    <title>{% block title %}Score Evaluation{% endblock %}</title>
     <link rel="icon" href="{% static 'img/favicon.png' %}">
-    <link href="https://fonts.googleapis.com/css?family=Clicker+Script" rel="stylesheet">
+{#    <link href="https://fonts.googleapis.com/css?family=Clicker+Script" rel="stylesheet">#}
   <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-{#    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">#}
-    <link rel="stylesheet" type="text/css" href="{% static 'vendor/fontello-2f186091/css/fontello.css' %}">
+{#    <link rel="stylesheet" type="text/css" href="{% static 'vendor/fontello-2f186091/css/fontello.css' %}">#}
     <link rel="stylesheet" type="text/css" href="{% static 'css/app.css' %}">
     {% if user.is_authenticated and user.is_teacher %}
       <link rel="stylesheet" type="text/css" href="{% static 'css/teachers.css' %}">
@@ -17,15 +16,14 @@
     {% endif %}
   </head>
   <body>
-    <a href="https://github.com/sibtc/django-multiple-user-types-example"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
     <div class="container my-4">
       <div class="row justify-content-center">
         <div class="col-md-10 col-sm-12">
           <div class="row">
             <div class="col-6">
               <h1 class="logo">
-{#                <a href="{% url 'home' %}">#}
-                  Django School
+                <a href="{% url 'home' %}">
+                  Home
                   {% if user.is_authenticated %}
                     {% if user.is_teacher %}
                       <span class="icon-feather" data-toggle="tooltip" data-placement="right" title="Teacher profile"></span>
