--- a/classroom/templates/classroom/teachers/score.html
+++ b/classroom/templates/classroom/teachers/score.html
@@ -17,9 +17,7 @@
                                     {{ answer.calculated_score }}
 
                                 {% else %}
-                                    <input type="button"
-                                           value="Refresh Page"
-                                           onClick="window.location.href=window.location.href">
+                                    <button class="icon-arrows-cw" onClick="window.location.href=window.location.href"></button>
                                     </p>
 
                                 {% endif %}
