--- a/static/css/app.css
+++ b/static/css/app.css
@@ -1,73 +1,73 @@
 body {
 
     font-family: "Segoe UI";
-
     text-decoration: none !important;
+    padding: 0px;
 }
 /*.logo {*/
   /*font-family: 'Clicker Script', cursive;*/
 /*}*/
 
 .logo a {
-  color: #212529;
+  color: #ECECEA;
   text-decoration: none;
+    background-color:#D9853B ;
+}
+.logo{
+    padding-bottom: -20px;
 }
 
-footer {
-  font-size: .9rem;
-}
 
-footer a {
-  color: #212529;
+.right-title-text{
+    text-decoration: underline;
 }
+/*.list-group-formset label {*/
+  /*display: none;*/
+/*}*/
 
-.list-group-formset label {
-  display: none;
-}
+/*.list-group-formset .form-group,*/
+/*.list-group-formset .invalid-feedback {*/
+  /*margin-bottom: 0;*/
+/*}*/
 
-.list-group-formset .form-group,
-.list-group-formset .invalid-feedback {
-  margin-bottom: 0;
-}
+/*.list-group-formset .form-control {*/
+  /*padding: .25rem .5rem;*/
+  /*font-size: .875rem;*/
+  /*line-height: 1.5;*/
+  /*border-radius: .2rem;*/
+/*}*/
 
-.list-group-formset .form-control {
-  padding: .25rem .5rem;
-  font-size: .875rem;
-  line-height: 1.5;
-  border-radius: .2rem;
-}
+/*.btn-student {*/
+  /*color: #fff;*/
+  /*background-color: #91afb6;*/
+  /*border-color: #91afb6;*/
+/*}*/
 
-.btn-student {
-  color: #fff;
-  background-color: #91afb6;
-  border-color: #91afb6;
-}
+/*.btn-student:hover,*/
+/*.btn-student:active {*/
+  /*color: #fff;*/
+  /*background-color: #608993;*/
+  /*border-color: #608993;*/
+/*}*/
 
-.btn-student:hover,
-.btn-student:active {
-  color: #fff;
-  background-color: #608993;
-  border-color: #608993;
-}
+/*.btn-teacher {*/
+  /*color: #fff;*/
+  /*background-color: #8980a5;*/
+  /*border-color: #8980a5;*/
+/*}*/
 
-.btn-teacher {
-  color: #fff;
-  background-color: #8980a5;
-  border-color: #8980a5;
-}
+/*.btn-teacher:hover,*/
+/*.btn-teacher:active {*/
+  /*color: #fff;*/
+  /*background-color: #66598B;*/
+  /*border-color: #66598B;*/
+/*}*/
 
-.btn-teacher:hover,
-.btn-teacher:active {
-  color: #fff;
-  background-color: #66598B;
-  border-color: #66598B;
-}
+/*.has-danger .radio,*/
+/*.has-danger .checkbox {*/
+  /*color: #dc3545;*/
+/*}*/
 
-.has-danger .radio,
-.has-danger .checkbox {
-  color: #dc3545;
-}
-
-.has-danger .invalid-feedback {
-  display: block;
-}
+/*.has-danger .invalid-feedback {*/
+  /*display: block;*/
+/*}*/
