--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
                 <div class="col-6">
                     <h1 class="logo">
                         <a href="{% url 'home' %}">
-                            Home
+                            &nbspHome
                             {% if user.is_authenticated %}
                                 {% if user.is_teacher %}
                                     <span class=" icon-bookmarks" data-toggle="tooltip" data-placement="right"
@@ -46,20 +46,18 @@
                     {% endif %}
                 </div>
             </div>
-            <div class="card mb-3">
-                <div class="card-body">
+
                     {% for message in messages %}
                         <div class="alert {{ message.tags }} alert-dismissible fade show" role="alert">
                             {{ message }}
-                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
+{#                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">#}
+{#                                <span aria-hidden="true">&times;</span>#}
+{#                            </button>#}
                         </div>
                     {% endfor %}
                     {% block content %}
                     {% endblock %}
-                </div>
-            </div>
+
 
         </div>
     </div>
