--- a/classroom/templates/classroom/teachers/score.html
+++ b/classroom/templates/classroom/teachers/score.html
@@ -35,7 +35,7 @@
 
                     <p hidden>{{ form.answer_id }}</p>
 
-                    <input type="submit" value="Submit"/>
+                    <button type="submit" value="Submit" class="btn btn-warning">Submit</button>
                 </form>
             </div>
         </div>
