--- a/classroom/templates/classroom/teachers/questions.html
+++ b/classroom/templates/classroom/teachers/questions.html
@@ -1,11 +1,24 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <a href="/teachers/add-question">add question</a>
 
-    <ul>
-        {% for question in object_list %}
-            <li><a href="{% url 'teachers:score' question.pk %}">{{ question.question }}</a></li>
-        {% endfor %}
-    </ul>
+    <div class="card">
+        <div class="card-body">
+            <div class="text-right">
+
+                <a  href="/teachers/add-question">
+                    <button type="button" class="btn btn-warning ">Add Question</button>
+                </a>
+            </div>
+
+            <ul class="list-group">
+                {% for question,answer_count in infos %}
+                    <li class="list-group-item d-flex justify-content-between align-items-center list-group-item-action">
+                        <a href="{% url 'teachers:score' question.pk %}">{{ question.question }}</a>
+                        <span class="badge badge-primary badge-pill">{{ answer_count }}</span>
+                    </li>
+                {% endfor %}
+            </ul>
+        </div>
+    </div>
 {% endblock %}
