--- a/static/css/app.css
+++ b/static/css/app.css
@@ -3,6 +3,7 @@ body {
     font-family: "Segoe UI";
     text-decoration: none !important;
     padding: 0px;
+    background-color: #74AFAD;
 }
 /*.logo {*/
   /*font-family: 'Clicker Script', cursive;*/
