--- a/classroom/templates/classroom/students/questions.html
+++ b/classroom/templates/classroom/students/questions.html
@@ -1,9 +1,18 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <ul>
-        {% for question in questions %}
-            <li>{{ question.question }} <a href="{% url 'students:take_test' question.pk %}" class="btn btn-primary">Start Test</a></li>
-        {% endfor %}
-    </ul>
+
+    <div class="card">
+        <div class="card-body">
+
+
+            <ul class="list-group">
+                {% for question in questions %}
+                    <li class="list-group-item d-flex justify-content-between align-items-center list-group-item-action">
+                        {{ question.question }}<br> by {{ question.owner.username }} &nbsp; Marks: {{ question.marks }} <a href="{% url 'students:take_test' question.pk %}"
+                                                   class="btn btn-warning">Submit Answer</a></li>
+                {% endfor %}
+            </ul>
+        </div>
+    </div>
 {% endblock %}
