--- a/classroom/templates/classroom/students/take_test_form.html
+++ b/classroom/templates/classroom/students/take_test_form.html
@@ -1,16 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-{{ question.question }}
-<form action="/students/questions/{{ question.id }}/" method="post">
-    {% csrf_token %}
-    {{ form.answer }}
-    <input type="submit" value="Submit"/>
-</form>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block content %}
+    <div class="card">
+        <div class="card-body">
+            <h5>Question: {{ question.question }}</h5>
+            <p>by {{ question.owner.username }} &nbsp;Marks: {{ question.marks }}</p>
+            <form action="/students/questions/{{ question.id }}/" method="post">
+                <div class="form-group">{% csrf_token %}
+                    <p for="id_answer">Answer:</p>
+                    {{ form.answer }}
+                </div>
+                <input type="submit" value="Submit" class="btn btn-warning"/>
+            </form>
+        </div>
+    </div>
+
+{% endblock %}
