--- a/templates/base.html
+++ b/templates/base.html
@@ -5,10 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>{% block title %}Score Evaluation{% endblock %}</title>
     <link rel="icon" href="{% static 'img/favicon.png' %}">
-    {#    <link href="https://fonts.googleapis.com/css?family=Clicker+Script" rel="stylesheet">#}
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'fontello-8276abb7/css/fontello.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/app.css' %}">
+
+  <script src={% static 'js/jquery.min.js' %}></script>
+  <script src={% static 'js/popper.min.js' %}></script>
+  <script src={% static 'js/bootstrap.min.js' %}></script>
     {% if user.is_authenticated and user.is_teacher %}
         <link rel="stylesheet" type="text/css" href="{% static 'css/teachers.css' %}">
     {% else %}
@@ -48,7 +51,8 @@
             </div>
 
                     {% for message in messages %}
-                        <div class="alert {{ message.tags }} alert-dismissible fade show" role="alert">
+                        <div class="alert {{ message.tags }} alert-dismissible fade show alert-success" role="alert">
+                        <button type="button" class="close" data-dismiss="alert">&times;</button>
                             {{ message }}
 {#                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">#}
 {#                                <span aria-hidden="true">&times;</span>#}
