--- a/static/css/app.css
+++ b/static/css/app.css
@@ -17,68 +17,36 @@ a{
   text-decoration: none;
     background-color:#D9853B ;
 }
-.logo{
-    margin-bottom: -20px;
-}
+
 .logo a:hover{
     color: black;
 }
 
 
 .right-title-text{
-    text-decoration: underline;
+    font-weight: bold;
 }
 .btn-warning{
     background: #D9853B !important;
     color: #ECECEA;
 }
-/*.list-group-formset label {*/
-  /*display: none;*/
-/*}*/
+.btn-success{
+    background: #558C89 !important;
+    color: #ECECEA;
+}
+.btn-success:hover{
+    background: #558C89 !important;
+    color: #000000;
+}
+.helptext, .helptext ul{
+    margin: 0 auto 20px;
+    display: block;
+    font-size: 0.9em;
 
-/*.list-group-formset .form-group,*/
-/*.list-group-formset .invalid-feedback {*/
-  /*margin-bottom: 0;*/
-/*}*/
-
-/*.list-group-formset .form-control {*/
-  /*padding: .25rem .5rem;*/
-  /*font-size: .875rem;*/
-  /*line-height: 1.5;*/
-  /*border-radius: .2rem;*/
-/*}*/
-
-/*.btn-student {*/
-  /*color: #fff;*/
-  /*background-color: #91afb6;*/
-  /*border-color: #91afb6;*/
-/*}*/
-
-/*.btn-student:hover,*/
-/*.btn-student:active {*/
-  /*color: #fff;*/
-  /*background-color: #608993;*/
-  /*border-color: #608993;*/
-/*}*/
-
-/*.btn-teacher {*/
-  /*color: #fff;*/
-  /*background-color: #8980a5;*/
-  /*border-color: #8980a5;*/
-/*}*/
-
-/*.btn-teacher:hover,*/
-/*.btn-teacher:active {*/
-  /*color: #fff;*/
-  /*background-color: #66598B;*/
-  /*border-color: #66598B;*/
-/*}*/
-
-/*.has-danger .radio,*/
-/*.has-danger .checkbox {*/
-  /*color: #dc3545;*/
-/*}*/
-
-/*.has-danger .invalid-feedback {*/
-  /*display: block;*/
-/*}*/
+}
+.errorlist li{
+    padding: 10px;
+    list-style-type: none;
+    border: 1px solid #ff5722;
+    color: #ff5722;
+}
