--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -3,25 +3,31 @@
 
 
 {% block content %}
-  {% if form.non_field_errors %}
-    <div class="alert alert-danger alert-dismissible fade show" role="alert">
-      {% for error in form.non_field_errors %}
-        <p{% if forloop.last %} class="mb-0"{% endif %}>{{ error }}</p>
-      {% endfor %}
-      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-      </button>
+    {% if form.non_field_errors %}
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            {% for error in form.non_field_errors %}
+                <p{% if forloop.last %} class="mb-0"{% endif %}>{{ error }}</p>
+            {% endfor %}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+    {% endif %}
+    <div class="row" style="padding-top: 20px">
+        <div class="card">
+            <div class="col-lg-4 col-md-6 col-sm-8 col-12">
+                <div class="card-title"><h2>Log in</h2></div>
+                <div class="card-body">
+
+                    <form method="post" action="/accounts/login/">
+                        {% csrf_token %}
+                        <input type="hidden" name="next" value="{{ next }}">
+                        {{ form }}
+                        <p></p>
+                        <button type="submit" class="btn btn-warning">Log in</button>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
-  {% endif %}
-  <div class="row">
-    <div class="col-lg-4 col-md-6 col-sm-8 col-12">
-      <h2>Log in</h2>
-      <form method="post" action="/accounts/login/">
-        {% csrf_token %}
-        <input type="hidden" name="next" value="{{ next }}">
-        {{ form }}
-        <button type="submit" class="btn btn-primary">Log in</button>
-      </form>
-    </div>
-  </div>
 {% endblock %}
