--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,8 +1,10 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h2>Sign up for a free account</h2>
-  <p class="lead">Select below the type of account you want to create</p>
-  <a href="{% url 'student_signup' %}" class="btn btn-student btn-lg" role="button">I'm a student</a>
-  <a href="{% url 'teacher_signup' %}" class="btn btn-teacher btn-lg" role="button">I'm a teacher</a>
+    <div class="row">
+        <div class="col-md-8 col-sm-10 col-12" style="padding-top: 20px">
+  <div class="card"><h2>Sign up for a free account</h2>
+  <div class="card-body"><p class="lead">Select below the type of account you want to create</p>
+  <a href="{% url 'student_signup' %}" class="btn btn-success btn-lg" role="button">I'm a student</a>
+      <a href="{% url 'teacher_signup' %}" class="btn btn-warning btn-lg" role="button">I'm a teacher</a></div></div></div></div>
 {% endblock %}
