--- a/templates/registration/signup_form_student.html
+++ b/templates/registration/signup_form_student.html
@@ -4,14 +4,15 @@
 
 {% block content %}
     <div class="row">
-        <div class="col-md-8 col-sm-10 col-12">
-            <h2>Sign up as a {{ user_type }}</h2>
+        <div class="col-md-8 col-sm-10 col-12" style="padding-top: 20px">
+            <div class="card"><div class="card-body"><h2>Sign up as a {{ user_type }}</h2>
             <form method="post" action="/accounts/signup/student/">
                 {% csrf_token %}
                 {{ form }}
                 <input type="hidden" name="next" value="{{ next }}">
-                <button type="submit" class="btn btn-success">Sign up</button>
-            </form>
+                <p></p>
+                <button type="submit" class="btn btn-warning">Sign up</button>
+            </form></div></div>
         </div>
     </div>
 {% endblock %}
