--- a/static/fontello-7010cf22/css/fontello.css
+++ b/static/fontello-7010cf22/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?45411104');
-  src: url('../font/fontello.eot?45411104#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?45411104') format('woff2'),
-       url('../font/fontello.woff?45411104') format('woff'),
-       url('../font/fontello.ttf?45411104') format('truetype'),
-       url('../font/fontello.svg?45411104#fontello') format('svg');
+  src: url('../font/fontello.eot?90078403');
+  src: url('../font/fontello.eot?90078403#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?90078403') format('woff2'),
+       url('../font/fontello.woff?90078403') format('woff'),
+       url('../font/fontello.ttf?90078403') format('truetype'),
+       url('../font/fontello.svg?90078403#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?45411104#fontello') format('svg');
+    src: url('../font/fontello.svg?90078403#fontello') format('svg');
   }
 }
 */
@@ -55,6 +55,10 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
-.icon-arrows-cw:before { content: '\e800'; } /* '' */
-.icon-bookmarks:before { content: '\e801'; } /* '' */
-.icon-bookmark:before { content: '\e802'; } /* '' */
+.icon-list-add:before { content: '\e800'; } /* '' */
+.icon-download:before { content: '\e801'; } /* '' */
+.icon-off:before { content: '\e802'; } /* '' */
+.icon-home:before { content: '\e803'; } /* '' */
+.icon-spin3:before { content: '\e832'; } /* '' */
+.icon-spin4:before { content: '\e834'; } /* '' */
+.icon-crown:before { content: '\e844'; } /* '' */
