--- a/templates/base.html
+++ b/templates/base.html
@@ -12,10 +12,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <title>{% block title %}Score Evaluation{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <link rel="icon" href="{% static 'img/favicon.png' %}">
 
     <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet" type="text/css" media="all"/>
     <link rel="stylesheet" href="{% static 'css/style.css' %}" type="text/css" media="all"/>
     <link href="{% static 'css/font-awesome.css' %}" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="{% static 'fontello-7010cf22/css/fontello.css' %}">
     <!-- font-awesome icons -->
 
     <!--// css -->
@@ -80,11 +82,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             <ul class="agile_forms">
                 {% if user.is_authenticated %}
                     <li>
-                       <strong style="color: #f8f8f8;">Logged in as {{ user.username }}</strong>
+                        <strong style="color: #f8f8f8;">Logged in as {{ user.username }}</strong>
                     </li>
                     <li>
-                        <a href="{% url 'logout' %}">
-                            <i class="fa fa-sign-out" aria-hidden="true"></i> Sign Out</a>
+                        <a href="{% url 'logout' %}"><i class=" icon-off"></i> Sign Out</a>
                     </li>
                 {% else %}
 
@@ -111,10 +112,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
                         {% url 'leaderboard' as leaderboard_url %}
                         <li {% if request.path == home_url %} class="active"{% endif %}>
-                            <a href="{% url 'home' %}">Home</a>
+                            <a href="{% url 'home' %}"><i class=" icon-home"></i> Home</a>
                         </li>
                         <li {% if request.path == leaderboard_url %} class="active"{% endif %}>
-                            <a href="{% url 'leaderboard' %}">Leaderboard</a>
+                            <a href="{% url 'leaderboard' %}"><i class=" icon-crown"></i> Leaderboard</a>
                         </li>
 
 
