--- a/classroom/templates/classroom/students/questions.html
+++ b/classroom/templates/classroom/students/questions.html
@@ -2,22 +2,18 @@
 
 {% block content %}
     <div class="container">
-        <div class="card" style="padding-top: 20px">
-            <div class="card-body">
 
+        <ul class="list-group" style="padding-top: 25px">
+            {% for question in questions %}
+                <li class="list-group-item d-flex justify-content-between align-items-center list-group-item-action">{{ question.question }}<br>
+                    <span
+                            style="float: right"><a href="{% url 'students:take_test' question.pk %}"
+                                                    class="btn btn-outline-success">Submit Answer</a></span><br>by {{ question.owner.username }}
+                    &nbsp;
+                    Marks: {{ question.marks }} &nbsp;&nbsp;
+                </li>
+            {% endfor %}
+        </ul>
 
-                <ul class="list-group">
-                    {% for question in questions %}
-                        <li class="list-group-item d-flex justify-content-between align-items-center list-group-item-action">{{ question.question }}<br>
-                            <span
-                                style="float: right"><a href="{% url 'students:take_test' question.pk %}"
-                                                        class="btn btn-outline-success">Submit Answer</a></span><br>by {{ question.owner.username }}
-                            &nbsp;
-                            Marks: {{ question.marks }} &nbsp;&nbsp;
-                        </li>
-                    {% endfor %}
-                </ul>
-            </div>
-        </div>
     </div>
 {% endblock %}
