--- a/classroom/templates/classroom/teachers/questions.html
+++ b/classroom/templates/classroom/teachers/questions.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="container">
-        <div class="card" style="padding-top: 10px">
+        <div class="card" >
             <div class="card-header">
                 <a href="/teachers/add-question">
                     <button type="button" class="btn btn-outline-success "><i class=" icon-list-add"></i> Add Question</button>
