--- a/templates/base.html
+++ b/templates/base.html
@@ -60,7 +60,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 </head>
 
 <body>
-<div class="w3-banner-edu">
+<div class="w3-banner-edu" style="padding-bottom: 25px">
     <div class="agileits_w3layouts_banner_nav">
         <nav class="navbar navbar-default">
             <div class="navbar-header navbar-left">
