--- a/classroom/templates/classroom/students/questions.html
+++ b/classroom/templates/classroom/students/questions.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="container">
 
-        <ul class="list-group" style="padding-top: 25px">
+        <ul class="list-group">
             {% for question in questions %}
                 <li class="list-group-item d-flex justify-content-between align-items-center list-group-item-action">{{ question.question }}<br>
                     <span
