--- a/classroom/templates/classroom/students/take_test_form.html
+++ b/classroom/templates/classroom/students/take_test_form.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="container">
-        <div class="row" style="padding-top: 25px">
+        <div class="row" >
             <div class="col-3">
             </div>
             <div class="col-6">
