--- a/classroom/templates/classroom/teachers/question_add_form.html
+++ b/classroom/templates/classroom/teachers/question_add_form.html
@@ -1,6 +1,11 @@
 {% extends 'base.html' %}
 
 {% block content %}
+    <div class="container">
+        <div class="row" >
+            <div class="col-3">
+            </div>
+            <div class="col-6">
     <div class="card"><div class="card-body"><form method="post" action="/teachers/add-question">
 
         <div class="form-group">
@@ -21,9 +26,14 @@
             <div>
                 <p>Marks:</p>
                 {{ form.marks }}
-            </div>
-            <p></p>
-            <input type="submit" value="Submit" class="btn btn-warning"/>
+            </div><br>
+            <input type="submit" value="Submit" class="btn btn-success"/>
         </div>
     </form></div></div>
+                </div>
+            <div class="col-3">
+
+            </div>
+        </div>
+    </div>
 {% endblock %}
