--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -3180,8 +3180,8 @@ fieldset[disabled] .btn-primary.focus {
 }
 .btn-success {
   color: #fff;
-  background-color: #5cb85c;
-  border-color: #4cae4c;
+  background-color: #1ed88b;
+  border-color: #1ed88b;
 }
 .btn-success:focus,
 .btn-success.focus {
@@ -3191,8 +3191,8 @@ fieldset[disabled] .btn-primary.focus {
 }
 .btn-success:hover {
   color: #fff;
-  background-color: #449d44;
-  border-color: #398439;
+  background-color: #efb312;
+  border-color: #efb312;
 }
 .btn-success:active,
 .btn-success.active,
