sign in page done

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -3,7 +3,7 @@
 
 
 {% block content %}
-    {% if form.non_field_errors %}
+    <div class="container">{% if form.non_field_errors %}
         <div class="alert alert-danger alert-dismissible fade show" role="alert">
             {% for error in form.non_field_errors %}
                 <p{% if forloop.last %} class="mb-0"{% endif %}>{{ error }}</p>
@@ -14,13 +14,25 @@
         </div>
     {% endif %}
 
-                    <form method="post" action="/accounts/login/">
-                        {% csrf_token %}
-                        <input type="hidden" name="next" value="{{ next }}">
-                        {{ form }}
-                        <p></p>
-                        <button type="submit" class="btn btn-warning">Log in</button>
-                    </form>
-
+        <div class="row" style="padding-top: 20px">
+            <div class="col-4"></div>
+            <div class="col-4">
+                <div class="card">
+                    <div class="card-header" style="background-color: #1ed88b"><h4><strong style="color: #FFFFFF;">Sign In</strong></h4></div>
+                    <div class="card-body"><form method="post" action="/accounts/login/">
+                    {% csrf_token %}
+                    <input type="hidden" name="next" value="{{ next }}">
+                    <div class="row"><div class="col-4"><label>Username</label>
+                        <br>
+                    <label>password</label></div>
+                        <div class="col-8">{{ form.username }}
+                    {{ form.password }}</div></div>
+                    <br>
+                    <button type="submit" class="btn btn-success">Log in</button>
+                </form></div></div>
+            </div>
+            <div class="col-4"></div>
+        </div>
+    </div>
 
 {% endblock %}
