--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <link rel="stylesheet" href="{% static 'css/style.css' %}" type="text/css" media="all"/>
     <link href="{% static 'css/font-awesome.css' %}" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{% static 'fontello-7010cf22/css/fontello.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'fontello-7010cf22/css/animation.css' %}">
     <!-- font-awesome icons -->
 
     <!--// css -->
