--- a/static/fontello-a0cc65b5/css/fontello-codes.css
+++ b/static/fontello-a0cc65b5/css/fontello-codes.css
@@ -3,6 +3,7 @@
 .icon-download:before { content: '\e801'; } /* '' */
 .icon-off:before { content: '\e802'; } /* '' */
 .icon-home:before { content: '\e803'; } /* '' */
+.icon-award:before { content: '\e804'; } /* '' */
 .icon-spin3:before { content: '\e832'; } /* '' */
 .icon-spin4:before { content: '\e834'; } /* '' */
 .icon-crown:before { content: '\e844'; } /* '' */
