--- a/static/fontello-a0cc65b5/css/fontello.css
+++ b/static/fontello-a0cc65b5/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?90078403');
-  src: url('../font/fontello.eot?90078403#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?90078403') format('woff2'),
-       url('../font/fontello.woff?90078403') format('woff'),
-       url('../font/fontello.ttf?90078403') format('truetype'),
-       url('../font/fontello.svg?90078403#fontello') format('svg');
+  src: url('../font/fontello.eot?90831455');
+  src: url('../font/fontello.eot?90831455#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?90831455') format('woff2'),
+       url('../font/fontello.woff?90831455') format('woff'),
+       url('../font/fontello.ttf?90831455') format('truetype'),
+       url('../font/fontello.svg?90831455#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?90078403#fontello') format('svg');
+    src: url('../font/fontello.svg?90831455#fontello') format('svg');
   }
 }
 */
@@ -59,6 +59,7 @@
 .icon-download:before { content: '\e801'; } /* '' */
 .icon-off:before { content: '\e802'; } /* '' */
 .icon-home:before { content: '\e803'; } /* '' */
+.icon-award:before { content: '\e804'; } /* '' */
 .icon-spin3:before { content: '\e832'; } /* '' */
 .icon-spin4:before { content: '\e834'; } /* '' */
 .icon-crown:before { content: '\e844'; } /* '' */
